[tool.poetry]
name = "dcinewsupdate"
version = "0.1.0"
description = ""
authors = ["Matthew Rossi <12902926+MattRossi@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
praw = "^7.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
